--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,33 +50,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  1.0000,  0.0000,  1.0000],\n",
-       "        [ 0.8415,  0.5403,  0.0100,  0.9999],\n",
-       "        [ 0.9093, -0.4161,  0.0200,  0.9998],\n",
-       "        [ 0.1411, -0.9900,  0.0300,  0.9996],\n",
-       "        [-0.7568, -0.6536,  0.0400,  0.9992]])"
+       "tensor([[ 0.0000,  1.0000,  0.0000],\n",
+       "        [ 0.8415,  0.5403,  0.8415],\n",
+       "        [ 0.9093, -0.4161,  0.9093],\n",
+       "        [ 0.1411, -0.9900,  0.1411],\n",
+       "        [-0.7568, -0.6536, -0.7568]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = torch.rand((2, 5))\n",
-    "output_dims = 4\n",
+    "output_dims = 3\n",
     "positional_embedding(a, output_dims)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,20 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(-0.1136, grad_fn=<SumBackward0>),\n",
-       " tensor([[0.0715, 0.0979, 0.0829, 0.0886, 0.0833, 0.0835, 0.0754, 0.0744, 0.0844,\n",
-       "          0.0754, 0.0918, 0.0908]], grad_fn=<SoftmaxBackward0>),\n",
-       " tensor([[-0.0482, -0.3826, -0.8782,  0.3126, -0.3020, -0.4886,  0.4078, -0.6122,\n",
-       "          -0.3082,  0.3724,  0.1097,  0.4523]], grad_fn=<AddmmBackward0>))"
+       "tensor(0.1516, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
