implemented add + norm

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "        [-0.7568, -0.6536, -0.7568]])"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,16 +92,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.1516, grad_fn=<SumBackward0>)"
+       "tensor(0.2987, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,6 +109,64 @@
    "source": [
     "x = torch.rand(1, 12)\n",
     "attention(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_norm(residual: torch.Tensor, hidden: torch.Tensor): \n",
+    "    if residual.shape != hidden.shape: \n",
+    "        raise ValueError(\"Shapes mismatch\")\n",
+    "    else: \n",
+    "        output = residual + hidden # element wise addition\n",
+    "        layer_norm = nn.LayerNorm([residual.shape[-2], residual.shape[-1]])\n",
+    "        return layer_norm(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[0.8880, 0.2732, 0.9008, 0.7261, 0.3817, 0.5167],\n",
+      "         [0.9505, 0.1640, 0.9440, 0.8701, 0.3452, 0.9666],\n",
+      "         [0.8365, 0.6466, 0.7730, 0.3295, 0.8195, 0.6639],\n",
+      "         [0.5948, 0.3429, 0.1542, 0.4754, 0.5124, 0.6733],\n",
+      "         [0.8461, 0.8573, 0.4217, 0.9035, 0.1438, 0.6029]]])\n",
+      "tensor([[[0.3105, 0.7641, 0.8900, 0.7077, 0.2874, 0.8929],\n",
+      "         [0.8561, 0.3155, 0.8284, 0.6441, 0.8224, 0.9303],\n",
+      "         [0.8458, 0.9986, 0.6091, 0.9989, 0.5183, 0.3800],\n",
+      "         [0.2779, 0.3161, 0.4261, 0.1374, 0.2840, 0.5407],\n",
+      "         [0.1030, 0.4531, 0.0115, 0.3710, 0.4745, 0.6053]]])\n",
+      "Added: tensor([[[1.1985, 1.0373, 1.7908, 1.4338, 0.6692, 1.4096],\n",
+      "         [1.8067, 0.4795, 1.7724, 1.5142, 1.1676, 1.8969],\n",
+      "         [1.6823, 1.6453, 1.3820, 1.3284, 1.3378, 1.0439],\n",
+      "         [0.8727, 0.6590, 0.5803, 0.6128, 0.7964, 1.2140],\n",
+      "         [0.9491, 1.3104, 0.4331, 1.2745, 0.6183, 1.2083]]])\n",
+      "Final: tensor([[[ 0.0655, -0.3161,  1.4676,  0.6224, -1.1876,  0.5652],\n",
+      "         [ 1.5051, -1.6365,  1.4239,  0.8129, -0.0076,  1.7187],\n",
+      "         [ 1.2108,  1.1231,  0.4999,  0.3730,  0.3953, -0.3006],\n",
+      "         [-0.7058, -1.2117, -1.3979, -1.3209, -0.8864,  0.1023],\n",
+      "         [-0.5249,  0.3304, -1.7463,  0.2453, -1.3079,  0.0886]]],\n",
+      "       grad_fn=<NativeLayerNormBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# usage example: \n",
+    "\n",
+    "tensor_a = torch.rand([1, 5, 6]) # batch size, sequence length, embedding dimensions\n",
+    "tensor_b = torch.rand([1, 5, 6])\n",
+    "print(tensor_a)\n",
+    "print(tensor_b)\n",
+    "print(f\"Final: {add_norm(tensor_a, tensor_b)}\")"
    ]
   }
  ],
