modified:   notebooks/transformer_scratchpad.ipynb

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -168,6 +168,22 @@
     "print(tensor_b)\n",
     "print(f\"Final: {add_norm(tensor_a, tensor_b)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multihead_attention():\n",
+    "    \"\"\"\n",
+    "    Scaled Dot product based multi-head attention\n",
+    "    \"\"\"\n",
+    "    query_layer, key_layer, value_layer = nn.Linear(x.shape[-1], x.shape[-1]), nn.Linear(x.shape[-1], x.shape[-1]), nn.Linear(x.shape[-1], x.shape[-1])\n",
+    "    query, key, value = query_layer(x), key_layer(x), value_layer(x)\n",
+    "    attention_weights  = torch.nn.Softmax(-1)(torch.tensordot(query, key, dims=1))\n",
+    "    return torch.sum(value * attention_weights)"
+   ]
   }
  ],
  "metadata": {
