multihead attention implemented and tested

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,25 +193,26 @@
     "    \"\"\"\n",
     "    Scaled Dot product based multi-head attention\n",
     "    \"\"\"\n",
-    "    \n",
+    "    # declare projection layers - assume all inputs have d_model size in the last dimension, and project to number of heads * d_k or d_v \n",
     "    query_layer, key_layer, value_layer = nn.Linear(d_model, num_heads* d_k), nn.Linear(d_model, num_heads* d_k), nn.Linear(d_model, num_heads*d_v)\n",
     "    k_len, q_len, v_len, batch_size = k.size(1), q.size(1), v.size(1),  q.size(0)\n",
-    "    print(key_layer(k).shape)\n",
-    "    print(query_layer(q).shape)\n",
-    "    print(value_layer(v).shape)\n",
+    "    residual = q\n",
+    "\n",
+    "    # in the following line we apply the linear projections and then reshape the outputs for multihead attention. \n",
+    "    #The reshaping splits the last dimension of the linear layer's output into num_heads and d_k (or d_v for value). \n",
+    "    # This creates multiple \"heads\" in the tensor, each with its own d_k (or d_v) dimension\n",
     "    k, q, v = key_layer(k).view(batch_size, k_len,  num_heads, d_k), query_layer(q).view(batch_size, q_len,  num_heads, d_k), value_layer(v).view(batch_size, v_len,  num_heads, d_v)\n",
     "    \n",
-    "    residual = q\n",
-    "    \n",
+    "    # we perform the following transpose so that the num heads dimension preceeds the seq length dimension. This way, each head can capture different information about the same sequence\n",
     "    q, k, v = q.transpose(1, 2), k.transpose(1, 2), v.transpose(1, 2)\n",
     "    attention = scaled_dot_product_attention(q, k, d_k)\n",
     "    output = torch.matmul(attention, v)\n",
     "\n",
+    "    # following reshaping is done so that we can add our output to the residual \n",
     "    output = output.transpose(1, 2).contiguous().view(batch_size, q_len, -1)\n",
     "    concatenated_projection = nn.Linear(num_heads * d_v, d_model, bias=False)\n",
     "\n",
     "    output = concatenated_projection(output)\n",
-    "    print(r)\n",
     "    output += residual\n",
     "\n",
     "    layer_norm = nn.LayerNorm([residual.shape[-2], residual.shape[-1]])\n",
@@ -222,33 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 2, 20])\n",
-      "torch.Size([1, 2, 20])\n",
-      "torch.Size([1, 2, 20])\n",
-      "hey\n",
-      "torch.Size([1, 4, 2, 5])\n",
-      "torch.Size([1, 4, 2, 5])\n",
-      "torch.Size([1, 4, 2, 5])\n",
-      "torch.Size([1, 4, 2, 2])\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "The size of tensor a (512) must match the size of tensor b (5) at non-singleton dimension 3",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[44], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m d_k, d_v \u001b[39m=\u001b[39m \u001b[39m5\u001b[39m, \u001b[39m5\u001b[39m\n\u001b[1;32m      6\u001b[0m num_heads \u001b[39m=\u001b[39m \u001b[39m4\u001b[39m\n\u001b[0;32m----> 8\u001b[0m multihead_attention(k, q, v, d_k, d_v, d_model, num_heads)\n",
-      "Cell \u001b[0;32mIn[43], line 28\u001b[0m, in \u001b[0;36mmultihead_attention\u001b[0;34m(k, q, v, d_k, d_v, d_model, num_heads)\u001b[0m\n\u001b[1;32m     25\u001b[0m concatenated_projection \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mLinear(num_heads \u001b[39m*\u001b[39m d_v, d_model, bias\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m     27\u001b[0m output \u001b[39m=\u001b[39m concatenated_projection(output)\n\u001b[0;32m---> 28\u001b[0m output \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m residual\n\u001b[1;32m     30\u001b[0m layer_norm \u001b[39m=\u001b[39m nn\u001b[39m.\u001b[39mLayerNorm([residual\u001b[39m.\u001b[39mshape[\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m], residual\u001b[39m.\u001b[39mshape[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]])\n\u001b[1;32m     31\u001b[0m output \u001b[39m=\u001b[39m layer_norm(output)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (512) must match the size of tensor b (5) at non-singleton dimension 3"
+      "q dims: torch.Size([1, 4, 2, 5]), k_dims = torch.Size([1, 4, 2, 5])\n",
+      "transposed: torch.Size([1, 4, 5, 2])\n",
+      "torch.Size([1, 2, 512]) torch.Size([1, 4, 2, 2])\n"
      ]
     }
    ],
@@ -260,7 +244,8 @@
     "d_k, d_v = 5, 5\n",
     "num_heads = 4\n",
     "\n",
-    "multihead_attention(k, q, v, d_k, d_v, d_model, num_heads)"
+    "out, attn = multihead_attention(k, q, v, d_k, d_v, d_model, num_heads)\n",
+    "print(out.shape, attn.shape)"
    ]
   }
  ],
