added position wise ffn

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -247,6 +247,31 @@
     "out, attn = multihead_attention(k, q, v, d_k, d_v, d_model, num_heads)\n",
     "print(out.shape, attn.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionWiseFFN(nn.Module): \n",
+    "    def __init__(self, d_model, d_ff) -> None:\n",
+    "        super(PositionWiseFFN, self).__init__()\n",
+    "        self.fc1 = nn.Sequential(\n",
+    "            nn.Linear(d_model, d_ff, bias=True),\n",
+    "            nn.ReLU()\n",
+    "        )\n",
+    "        self.fc2 = nn.Linear(d_ff, d_model, bias=True)\n",
+    "        self.layer_norm = nn.LayerNorm(d_model)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        residual = x\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.fc2(x)\n",
+    "\n",
+    "        x+=residual\n",
+    "        return self.layer_norm(x)\n"
+   ]
   }
  ],
  "metadata": {
