--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "        [-0.7568, -0.6536, -0.7568]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.0080, grad_fn=<SumBackward0>)"
+       "tensor(-0.0631, grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,8 +113,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just to emulate how it would be implemented, we write out the add norm function below. However in practice, this will be encompassed by each transformer sub module since each of them are followed by addition with residual and layer normalization. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,28 +136,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.1045, 0.4312, 0.0299, 0.8858, 0.9968, 0.1152],\n",
-      "         [0.8752, 0.2635, 0.2181, 0.6305, 0.3234, 0.0159],\n",
-      "         [0.5359, 0.7384, 0.2475, 0.3941, 0.5815, 0.7737],\n",
-      "         [0.0514, 0.8584, 0.9550, 0.1863, 0.0683, 0.8739],\n",
-      "         [0.0726, 0.5960, 0.9250, 0.5273, 0.2494, 0.8675]]])\n",
-      "tensor([[[0.9378, 0.8276, 0.3353, 0.4124, 0.3723, 0.7553],\n",
-      "         [0.1377, 0.5286, 0.3779, 0.4345, 0.5243, 0.9111],\n",
-      "         [0.5583, 0.2620, 0.9314, 0.6691, 0.2225, 0.4130],\n",
-      "         [0.9031, 0.4765, 0.7315, 0.8451, 0.5465, 0.3815],\n",
-      "         [0.9565, 0.4849, 0.0307, 0.1105, 0.7993, 0.4004]]])\n",
-      "Final: tensor([[[ 0.0758,  0.9001, -2.5009,  1.0501,  1.3197, -0.5781],\n",
-      "         [-0.0360, -0.8759, -1.6224,  0.1626, -0.6648, -0.3628],\n",
-      "         [ 0.2734, -0.0834,  0.5958,  0.1556, -0.8310,  0.6256],\n",
-      "         [-0.2583,  1.1896,  2.5278,  0.0344, -1.5507,  0.8871],\n",
-      "         [ 0.0259,  0.2226, -0.2535, -1.4633,  0.1003,  0.9343]]],\n",
+      "tensor([[[0.4798, 0.0733, 0.9246, 0.9232, 0.8420, 0.7289],\n",
+      "         [0.5115, 0.8718, 0.9227, 0.9176, 0.7529, 0.6058],\n",
+      "         [0.4938, 0.9175, 0.9505, 0.0821, 0.8946, 0.8835],\n",
+      "         [0.8759, 0.1793, 0.3222, 0.4535, 0.7326, 0.8833],\n",
+      "         [0.1397, 0.9988, 0.5021, 0.1885, 0.6068, 0.5807]]])\n",
+      "tensor([[[0.5278, 0.7106, 0.0225, 0.1594, 0.6950, 0.1188],\n",
+      "         [0.1737, 0.4454, 0.9145, 0.4098, 0.7631, 0.5530],\n",
+      "         [0.6709, 0.3885, 0.7824, 0.5751, 0.2715, 0.5452],\n",
+      "         [0.0527, 0.0020, 0.6902, 0.0224, 0.4964, 0.2405],\n",
+      "         [0.9476, 0.8544, 0.1650, 0.4228, 0.0887, 0.4015]]])\n",
+      "Final: tensor([[[-0.1810, -0.7537, -0.3358,  0.0108,  1.1739, -0.5905],\n",
+      "         [-1.0066,  0.6114,  1.9423,  0.6375,  1.1202,  0.2058],\n",
+      "         [ 0.2211,  0.5826,  1.6755, -1.0783,  0.2246,  0.8967],\n",
+      "         [-0.3834, -2.2963, -0.1688, -1.5421,  0.3856,  0.1163],\n",
+      "         [ 0.0228,  1.9835, -1.0526, -1.1954, -0.9801, -0.2461]]],\n",
       "       grad_fn=<NativeLayerNormBackward0>)\n"
      ]
     }
@@ -167,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,6 +222,7 @@
     "    output = concatenated_projection(output)\n",
     "    output += residual\n",
     "\n",
+    "    print(residual.shape)\n",
     "    layer_norm = nn.LayerNorm([residual.shape[-2], residual.shape[-1]])\n",
     "    output = layer_norm(output)\n",
     "\n",
@@ -223,15 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "q dims: torch.Size([1, 4, 2, 5]), k_dims = torch.Size([1, 4, 2, 5])\n",
-      "transposed: torch.Size([1, 4, 5, 2])\n",
+      "torch.Size([1, 2, 512])\n",
       "torch.Size([1, 2, 512]) torch.Size([1, 4, 2, 2])\n"
      ]
     }
@@ -250,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,11 +273,73 @@
     "    \n",
     "    def forward(self, x):\n",
     "        residual = x\n",
-    "        x = self.fc1(x)\n",
-    "        x = self.fc2(x)\n",
+    "        x = self.fc2(self.fc1(x))        \n",
+    "        return self.layer_norm(x+residual)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[-0.5878, -0.7818,  0.5670,  ...,  0.0621, -1.2793,  0.7879],\n",
+       "         [ 0.5175,  1.8379,  1.3007,  ...,  0.3632, -0.2532,  0.3898]]],\n",
+       "       grad_fn=<NativeLayerNormBackward0>)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ffn = PositionWiseFFN(d_model, 2048)\n",
+    "x = torch.rand((1, 2, d_model))\n",
+    "ffn(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttention(nn.Module): \n",
+    "    def __init__(self, d_k, d_model, d_v, dropout, num_heads) -> None:\n",
+    "        super(MultiHeadAttention, self).__init__()\n",
+    "        self.d_k, self.d_v, self.d_model = d_k, d_v, d_model\n",
+    "        self.query_layer, self.key_layer, self.value_layer = nn.Linear(d_model, num_heads* d_k), nn.Linear(d_model, num_heads* d_k), nn.Linear(d_model, num_heads*d_v)\n",
+    "        self.layer_norm = nn.LayerNorm(d_model)\n",
+    "        self.concat_projection = nn.Linear(num_heads*d_v, d_model)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
-    "        x+=residual\n",
-    "        return self.layer_norm(x)\n"
+    "    def forward(self, q, k, v):\n",
+    "        k_len, q_len, v_len, batch_size = k.size(1), q.size(1), v.size(1),  q.size(0)\n",
+    "        residual = q\n",
+    "        k, q, v = self.key_layer(k).view(batch_size, k_len,  num_heads, d_k), self.query_layer(q).view(batch_size, q_len,  num_heads, d_k), self.value_layer(v).view(batch_size, v_len,  num_heads, d_v)\n",
+    "        q, k, v = q.transpose(1, 2), k.transpose(1, 2), v.transpose(1, 2)\n",
+    "        attention = scaled_dot_product_attention(q, k, d_k)\n",
+    "        output = torch.matmul(attention, v)\n",
+    "        output = self.concat_projection(output.transpose(1, 2).contiguous().view(batch_size, q_len, -1))\n",
+    "        return self.dropout(self.layer_norm(output+residual))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderLayer(nn.Module): \n",
+    "    def __init__(self, d_k, d_model, d_v, num_heads, d_ff, dropout) -> None:\n",
+    "        super(EncoderLayer).__init__()\n",
+    "        self.multihead_attention = MultiHeadAttention(d_k, d_model, d_v, dropout, num_heads)\n",
+    "        self.pointwise_ffn = PositionWiseFFN(d_model, d_ff)\n",
+    "    \n",
+    "    def forward()"
    ]
   }
  ],
