modified:   notebooks/transformer_scratchpad.ipynb

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -262,19 +262,17 @@
    "outputs": [],
    "source": [
     "class PositionWiseFFN(nn.Module): \n",
-    "    def __init__(self, d_model, d_ff) -> None:\n",
+    "    def __init__(self, d_model, d_ff, dropout) -> None:\n",
     "        super(PositionWiseFFN, self).__init__()\n",
-    "        self.fc1 = nn.Sequential(\n",
-    "            nn.Linear(d_model, d_ff, bias=True),\n",
-    "            nn.ReLU()\n",
-    "        )\n",
+    "        self.fc1 = nn.Sequential(nn.Linear(d_model, d_ff, bias=True),nn.ReLU())\n",
     "        self.fc2 = nn.Linear(d_ff, d_model, bias=True)\n",
     "        self.layer_norm = nn.LayerNorm(d_model)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        residual = x\n",
     "        x = self.fc2(self.fc1(x))        \n",
-    "        return self.layer_norm(x+residual)\n"
+    "        return self.dropout(self.layer_norm(x+residual))\n"
    ]
   },
   {
@@ -299,6 +297,13 @@
     "ffn = PositionWiseFFN(d_model, 2048)\n",
     "x = torch.rand((1, 2, d_model))\n",
     "ffn(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we've implemented the lowest level building blocks of the transormer, below we put them together to build transformer blocks, encoder and decoder layers, and the complete transformer architecture. Now we try and condense everything to a more concise-less experimental implementation. "
    ]
   },
   {
@@ -339,7 +344,7 @@
     "        self.multihead_attention = MultiHeadAttention(d_k, d_model, d_v, dropout, num_heads)\n",
     "        self.pointwise_ffn = PositionWiseFFN(d_model, d_ff)\n",
     "    \n",
-    "    def forward()"
+    "    def forward(self, )"
    ]
   }
  ],
