more blocks built

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -341,10 +341,25 @@
     "class EncoderLayer(nn.Module): \n",
     "    def __init__(self, d_k, d_model, d_v, num_heads, d_ff, dropout) -> None:\n",
     "        super(EncoderLayer).__init__()\n",
+    "        self.k_layer, self.q_layer, self.v_layer = nn.Linear(d_k, d_model), nn.Linear(d_k, d_model), nn.Linear(d_v, d_model)\n",
     "        self.multihead_attention = MultiHeadAttention(d_k, d_model, d_v, dropout, num_heads)\n",
     "        self.pointwise_ffn = PositionWiseFFN(d_model, d_ff)\n",
     "    \n",
-    "    def forward(self, )"
+    "    def forward(self, x): \n",
+    "        k, q, v = self.k_layer(x), self.q_layer(x), self.v_layer(x)\n",
+    "        output = self.multihead_attention(q, k, v)\n",
+    "        return self.pointwise_ffn(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, ) -> None:\n",
+    "        super(Encoder, self).__init__()"
    ]
   }
  ],
