--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -358,8 +358,20 @@
    "outputs": [],
    "source": [
     "class Encoder(nn.Module):\n",
-    "    def __init__(self, ) -> None:\n",
-    "        super(Encoder, self).__init__()"
+    "    def __init__(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, vocab_size, dropout=0.1) -> None:\n",
+    "        super(Encoder, self).__init__()\n",
+    "        self.d_model = d_model\n",
+    "        self.embedding = nn.Embedding(vocab_size, d_model, padding_idx=0)\n",
+    "        self.positional_embedding = positional_embedding\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.layers = [EncoderLayer(d_k, d_model, d_v, num_heads, d_ff, dropout) for _ in range(num_layers)]\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        embedded = self.embedding(x)\n",
+    "        x = self.dropout(embedded + self.positional_embedding(x, d_model))\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x)\n",
+    "        return x"
    ]
   }
  ],
